# trading-workflow

./: .env  .env.example  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: CONTRIBUTING.md  copilot-instructions.md
data/: sample_data.py
models/: workflow_state.py
persistence/: state_manager.py
skills/: __init__.py  allocation_agent.md  mbs_decomposition_agent.md  new_volume_agent.md  risk_agent.md  skill_loader.py
tests/: conftest.py
tests/integration/: conftest.py  test_agents_live.py
tests/unit/: test_allocation_tools.py  test_computation_tools.py  test_risk_tools.py  test_sample_data.py  test_skill_loader.py  test_state_manager.py  test_workflow_state.py
tools/: allocation_tools.py  computation.py  human_loop.py  risk_tools.py  tool_registry.py
tracing/: phoenix_setup.py
trading_ai/: pyvenv.cfg
trading_ai/Scripts/: activate  activate.bat  jp.py
workflow_agents/: allocation_agent.py  mbs_decomposition_agent.py  new_volume_agent.py  orchestrator.py  risk_agent.py
workflow_states/: 20260309_161131_136f7c.json  20260309_161511_2c984a.json  20260309_161709_2b8416.json  20260309_174942_e1533b.json  20260309_175526_c23ecd.json  20260309_175655_359df1.json  20260309_175747_3c9856.json  20260311_154411_88e719.json  20260311_154808_ea518e.json  _latest.json
