[project]
name = "trading-workflow"
version = "0.1.0"
description = "Agentic human-in-the-loop workflow for fixed-income portfolio management"
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.0.9",
    "openai>=1.50.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    "arize-phoenix>=4.5.0",
    "openinference-instrumentation-openai-agents>=0.1.0",
    "openinference-instrumentation-openai>=0.1.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "aiofiles>=23.2.1",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

# ---------------------------------------------------------------------------
# Dev dependencies — installed via `uv sync --all-groups`
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pandas-stubs>=2.0.0",
    "types-aiofiles>=23.2.0",
    "types-PyYAML>=6.0.0",
]

# ---------------------------------------------------------------------------
# Ruff — formatter and linter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".venv",
    "trading_ai",
    "dist",
    "tmp",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type annotation enforcement)
    "RUF", # ruff-specific rules
]
ignore = [
    "ANN101", # missing type annotation for `self`
    "ANN102", # missing type annotation for `cls`
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]  # relax annotation rules in tests

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "trading_ai/",
    "dist/",
    "tmp/",
]

[[tool.mypy.overrides]]
module = [
    "openai_agents.*",
    "phoenix.*",
    "openinference.*",
    "opentelemetry.*",
    "arize.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = [
    "agents",
    "data",
    "models",
    "persistence",
    "skills",
    "tools",
    "tracing",
    "workflow_agents",
]
omit = [
    "tests/*",
    "trading_ai/*",
    "dist/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]
default-groups = ["dev"]
